# Violet-Edge

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  build.rs
.github/workflows/: release.yml
src/: audio.rs  main.rs
