[package]
name = "violet-edge"
version = "0.2.4"
edition = "2021"

[dependencies]
# Pinned to 0.16 on purpose: this code was written against 0.16's exact API
# (Camera2d/Bloom/Gizmos). Do NOT bump without updating the code to match — Bevy
# changes its API a lot between releases.
# `wav` adds rodio's WAV decoder (not in Bevy's defaults) so we can feed the
# procedurally-synthesized soundtrack (src/audio.rs) as an in-memory WAV.
bevy = { version = "0.16", features = ["wav"] }
# For setting the window/taskbar icon (Bevy's Window has no icon field). Pinned to the exact
# version Bevy 0.16 resolves so there's a single winit copy — the Icon type must match bevy_winit's.
winit = "=0.30.13"
rand = "0.8"

# Windows-only: embed the .exe file icon (assets/icon.ico) at build time via build.rs.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Bevy's recommended dev profile: optimize dependencies (so the engine runs
# smoothly) but keep our own crate quick to recompile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
